--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -233,7 +233,7 @@
 </head>
 <body>
    <!-- GitHub Icon -->
-  <a href="https://github.com/medix-Mpic" target="_blank" title="Narrator Extension Repo">
+  <a href="https://github.com/medix-Mpic/Narrator-extension" target="_blank" title="Narrator Extension Repo">
     <img src="images/github.png" alt="GitHub" class="github-icon" >
   </a>
   <!-- Loading screen -->
